<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/txtEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/enter_the_received_otp_below"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnter"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:hint="@string/otp"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOTP"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:hint="@string/new_password"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />
    <EditText
        android:id="@+id/etMatchNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNum"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:hint="@string/confirm_password"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMatchNum"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />


</RelativeLayout>